feature: playlistService 누락 된 수정사항 수정 Projections.constructor 활용하여 쿼리 수정 및 관련 코드/테스트 코드 수정